Add needs project.

--- a/astex.io/index.html
+++ b/astex.io/index.html
@@ -28,6 +28,15 @@
           </a>
         </div>
       </div>
+      <div class="site">
+        <img src="img/python.png">
+        <div class="cover">
+          <a href="http://github.com/astex/needs" target="_blank">
+            <h2>Needs</h2>
+            <p>A python library for permissions management.</p>
+          </a>
+        </div>
+      </div>
     </section>
   </body>
 </html>
