Use container for wrapping covers.

--- a/astex.io/index.html
+++ b/astex.io/index.html
@@ -8,7 +8,7 @@
     <header><a href="/">Phil Condreay</a></header>
     <section class="body">
       <h1>Work</h1>
-      <div class="site">
+      <div class="site c_cover">
         <img src="img/foodtoeat.png">
         <div class="cover">
           <a href="https://foodtoeat.com" target="_blank">
@@ -18,7 +18,7 @@
           </a>
         </div>
       </div>
-      <div class="site">
+      <div class="site c_cover">
         <img src="img/django.png">
         <div class="cover">
           <a href="http://living-with-django.astex.io" target="_blank">
@@ -27,7 +27,7 @@
           </a>
         </div>
       </div>
-      <div class="site">
+      <div class="site c_cover">
         <img src="img/python.png">
         <div class="cover">
           <a href="http://github.com/astex/needs" target="_blank">
