Adjust section styling.

--- a/astex.io/index.html
+++ b/astex.io/index.html
@@ -7,35 +7,37 @@
   <body>
     <header><a href="/">Phil Condreay</a></header>
     <section class="body">
-      <h1>Work</h1>
-      <div class="site c_cover">
-        <img src="img/foodtoeat.png">
-        <div class="cover">
-          <a href="https://foodtoeat.com" target="_blank">
-            <h2>FoodtoEat.com</h2>
-            <p>A food ordering service focussed on corporate and catering customers.</p>
-            <footer><strong>Position:</strong> Backend Developer</footer>
-          </a>
+      <section>
+        <h1>Work</h1>
+        <div class="site c_cover">
+          <img src="img/foodtoeat.png">
+          <div class="cover">
+            <a href="https://foodtoeat.com" target="_blank">
+              <h2>FoodtoEat.com</h2>
+              <p>A food ordering service focussed on corporate and catering customers.</p>
+              <footer><strong>Position:</strong> Backend Developer</footer>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="site c_cover">
-        <img src="img/django.png">
-        <div class="cover">
-          <a href="http://living-with-django.astex.io" target="_blank">
-            <h2>Living With Django</h2>
-            <p>A blog about dealing with a subpar backend web framework.</p>
-          </a>
+        <div class="site c_cover">
+          <img src="img/django.png">
+          <div class="cover">
+            <a href="http://living-with-django.astex.io" target="_blank">
+              <h2>Living With Django</h2>
+              <p>A blog about dealing with a subpar backend web framework.</p>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="site c_cover">
-        <img src="img/python.png">
-        <div class="cover">
-          <a href="http://github.com/astex/needs" target="_blank">
-            <h2>Needs</h2>
-            <p>A python library for permissions management.</p>
-          </a>
+        <div class="site c_cover">
+          <img src="img/python.png">
+          <div class="cover">
+            <a href="http://github.com/astex/needs" target="_blank">
+              <h2>Needs</h2>
+              <p>A python library for permissions management.</p>
+            </a>
+          </div>
         </div>
-      </div>
+      </section>
     </section>
   </body>
 </html>
