Add education section.

--- a/astex.io/index.html
+++ b/astex.io/index.html
@@ -38,6 +38,17 @@
           </div>
         </div>
       </section>
+      <section>
+        <h1>Education</h1>
+        <div class="school">
+          <h2>Penn State University <small>2008 to 2012</small></h2>
+          <ul>
+            <li>Astrophysics BS</li>
+            <li>Mathematics BS</li>
+            <li>Physics Minor</li>
+          </ul>
+        </div>
+      </section>
     </section>
   </body>
 </html>
