Add fontello font.

--- a/astex.io/index.html
+++ b/astex.io/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Phil Condreay</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts/css/astex.css">
+    <link rel="stylesheet" href="fonts/css/animation.css">
+    <link rel="stylesheet" href="fonts/css/astex-codes.css">
   </head>
   <body>
     <header><a href="/">Phil Condreay</a></header>
