Add action button to send me email.

--- a/astex.io/index.html
+++ b/astex.io/index.html
@@ -53,5 +53,8 @@
         </div>
       </section>
     </section>
+    <a class="button action" href="mailto:0astex@gmail.com">
+      <i class="icon icon-mail"></i>
+    </a>
   </body>
 </html>
