Fix a grammar error.

--- a/astex.io/index.html
+++ b/astex.io/index.html
@@ -18,7 +18,7 @@
       <p>I believe that much of the modern web is over-designed, that people include structure in their sites without a good understanding of why.</p>
       <p>My design work tends to be subdued.</p>
       <p>If you'd like to get in touch about a project you'd like to build, you can email me at <a href="mailto:0astex@gmail.com">0astex@gmail.com</a>.</p>
-      <p>Here's a few projects I've worked on:</p>
+      <p>Here are a few projects I've worked on:</p>
     </section>
     <section>
       <ul class="resume">
