--- a/astex.io/index.html
+++ b/astex.io/index.html
@@ -9,6 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- GSuite -->
+    <meta name="google-site-verification" content="X13XkxZPX0JNHvALFdUB6s8W8i2cDs-E-FN_C2CGdf0">
+
     <meta name="description" content="Phil Condreay, Software Engineer">
   </head>
   <body>
